# TelegramBot

./: .env  .gitignore  Dockerfile  Makefile  pyproject.toml
src/: llms.py  main.py
src/bots/: what_she_thinks.py
src/conf/: config.py
